--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,12 @@
 }
 
 .circle{
-  color: purple;
-  border-radius: 50%;
-  height: 5px;
-  width: 5px;
+  fill: purple;
+}
+
+.bubbleText{
+  font-size: 600px;
+  color: black;
 }
 
 .clearfix {
@@ -182,7 +184,7 @@ ul {
   float: left;
   padding: 10px;
   padding-left: 0px;
-  width: 120px;
+  width: 135px;
   display: none;
 }
 
@@ -198,6 +200,12 @@ img {
 span {
   padding: 5px;
     color: #000000;
+}
+
+.skills{
+  display: none;
+  font-weight: bold;
+  color: #FFFFFF;
 }
 
 #letsConnect {
@@ -228,7 +236,7 @@ span {
 
 @media only screen and (max-width:900px) {
   .biopic {
-    width: 108px;
+    width: 123px;
   }
 }
 
@@ -258,6 +266,7 @@ span {
 }
 
 @media only screen and (min-width: 750px) {
+  .skills,
   #skillsH3,
   .biopic {
     display: block;
